# RSS-WS

./: .gitignore  .gitmodules  ANSWER_FRAMEWORK.md  Change.md  GEMINI.md  README.md  main.py  pyproject.toml  requirements.in  requirements.txt  zombie_movement_visualization.py
.cursor/rules/: context-based-logging.mdc  development-protocol.mdc  no-hasty-edits.mdc  use-pytest.mdc  use-uv.mdc
configs/: ant_full_adaptive.yaml  config.yaml  fair_no_oracle.yaml  fair_supervised.yaml  halfcheetah_full_adaptive.yaml  hopper_full_adaptive.yaml  inverteddoublependulum_full_adaptive.yaml  pilot_swimmer.yaml  pilot_swimmer_gpu.yaml  pusher_full_adaptive.yaml  smoke.yaml  swimmer_full_adaptive.yaml  walker2d_full_adaptive.yaml  workshop.yaml  workshop_big.yaml  workshop_gpu.yaml
docs/: 1-hybrid-evaluation-framework-for-symbolic-wms.md  crafter-evaluation-framework-prd.md  duc_wm_framework_for_mentor.tex  hybrid-evaluation-framework-prd.md  poe-world-crafter-synthesis-design.md  poe-world-domain-analysis.md
docs/issues/: 001-spatial-relationship-limitation.md  004-composed-world-model-and-learner.md
outputs/: smoke_mujoco_experiment.json
poe-world-implementation-docs/: 1d_test_environment.md  complex_prd.md  poe-world-codebase-outline.md  poe-world-expert-synthesis-analysis.md  poe-world-online-learning-analysis.md  prd.md
scripts/: aggregate_avg_rank.py  aggregate_duc_results.py  aggregate_mujoco_results.py  format_mujoco_final_table.py  format_mujoco_paper_tables.py  format_workshop_final_table.py  run_balanced_gpu_jobs.py  run_flat_benchmark_jobs.py  run_mujoco_experiment.py  run_workshop_suite.py  select_certified_candidate.py  synthesize_mujoco_laws.py
src/distant_sunburn/: __init__.py  balrog_components.py  balrog_crafter.py  balrog_evaluator.py  balrog_interfaces.py  balrog_language_symbolic_crafter.py  crafter_environment_factory.py  crafter_symbolic.py  deterministic_fsm_env.py  evaluator.py  experiment_utils.py  json_utils.py  litellm_utils.py  log_utils.py  typed_crafter.py  unsupervised_crafter_env_factory.py
src/distant_sunburn/evaluator/: __init__.py  adapters.py  baselines.py  components.py  core.py  random_crafter_model.py
src/distant_sunburn/our_method/: action_remapping.py  core.py  optimization.py  world_modeling.py
src/distant_sunburn/poe_world/: core.py  expert_manager.py  object_model_learner.py  observable_extractor.py  synthesizer.py  weight_fitter.py  world_model.py
src/distant_sunburn/simple_1d_env/: environment.py
src/onelife/: balrog_client.py  balrog_crafter.py  balrog_evaluator.py  balrog_interfaces.py  balrog_utilities.py  crafter_environment_factory.py  distant_sunburn_game_environment_factory.py  experiment_utils.py  io_utils.py  json_utils.py  litellm_utils.py  local_code_execution.py  log_utils.py  mixed_fsm_env.py  mujoco_dataset.py  mujoco_onelife_llm.py  mujoco_symbolic_adapter.py  pipeline_utils.py  typing_utils.py  unsupervised_crafter_env_factory.py
src/onelife/duc_wm/: __init__.py  baselines.py  core.py  data.py  law_dsl.py  llm_prior.py  losses.py  metrics.py  (+9 more)
tests/: test_aggregate_mujoco_results.py  test_balrog_language_symbolic_crafter.py  test_evaluator.py  test_handwritten_experts.py  test_hybrid_evaluator.py  test_json_utils.py  test_litellm_utils.py  test_local_code_execution.py  test_main_model_options.py  test_mujoco_dataset.py  test_mujoco_final_metrics.py  test_mujoco_onelife_llm.py  test_mujoco_symbolic_adapter.py  test_poe_world_inference.py  test_simple_1d_environment.py  test_unsupervised_text_renderer.py
tests/balrog/: test_balrog_utilities.py  test_crafter_environment_factory.py  test_evaluator_crafter.py  test_evaluator_distant_sunburn.py
tests/duc_wm/: test_baselines.py  test_duc_model.py  test_llm_prior.py  test_mujoco_ext.py  test_planning_eval.py  test_simfutures.py
tests/evaluator/: test_crafter_evaluator.py  test_crafter_integration.py  test_crafter_mutators.py  test_crafter_scenarios.py  test_numpy_sanitization.py  test_poe_world_simple_1d_integration.py  test_random_crafter_model.py  test_simple_1d_environment.py
tests/our_method/: test_world_modeling.py
tests/poe_world/: test_composed_world_model.py  test_crafter_full_integration.py  test_expert_manager.py  test_expert_manager_integration.py  test_handwritten_experts.py  test_object_model_learner_integration.py  test_one_d_test_environment.py  test_poe_world_learner_offline.py  test_single_transition_debugging.py
tests/program_residual/: test_island_search.py  test_llm_synthesizer.py  test_program_residual.py  test_task_specs.py
(+118 files in other folders)
