[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "distant_sunburn"
version = "0.0.1"
description = ""
readme = "README.md"
authors = []
dependencies = [
    "12-distant-sunburn-gameenv",
    "anthropic[balrog]>=0.64.0",
    "backoff>=2.2.1",
    "crafter",
    "google-generativeai[balrog]>=0.8.5",
    "gymnasium>=1.2.0",
    "hatch>=1.14.1",
    "icecream>=2.1.6",
    "ipdb>=0.13.13",
    "jsonpatch>=1.33",
    "litellm>=1.75.3",
    "loguru>=0.7.3",
    "openai[balrog]>=1.90.0",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "pyro-ppl>=1.9.1",
    "pytest-asyncio>=1.1.0",
    "python-ulid>=3.0.0",
    "safetensors>=0.6.2",
    "scipy>=1.16.1",
    "setuptools>=79.0.1",
    "tenacity>=9.1.2",
    "tensordict>=0.9.1",
    "vllm>=0.10.0; sys_platform == 'linux'",
]

[tool.hatch.build]
sources = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v -ra --strict-markers"
markers = [
    "asyncio: mark test as async",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.uv.sources]
12-distant-sunburn-gameenv = { path = "external/12-distant-sunburn-gameenv", editable = true }
crafter = { path = "external/crafter_refactored", editable = true }

[dependency-groups]
balrog = [
    "anthropic>=0.64.0",
    "google-generativeai>=0.8.5",
    "openai>=1.90.0",
]

[tool.ty.src]
include = ["src", "tests"]
exclude = ["src/distant_sunburn/external"]
