[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onelife"
requires-python = ">=3.12"
version = "0.0.1"
description = ""
readme = "README.md"
authors = []
dependencies = [
    "annotated-doc>=0.0.4",
    "anthropic[balrog]>=0.64.0",
    "backoff>=2.2.1",
    "cffi>=2.0.0",
    "crafter",
    "crafter-oo",
    "docstring-parser>=0.18.0",
    "google-generativeai[balrog]>=0.8.5",
    "gymnasium[mujoco]>=1.2.0",
    "hatch>=1.14.1",
    "httpcore2>=2.3.0",
    "icecream>=2.1.6",
    "ipdb>=0.13.13",
    "jsonpatch>=1.33",
    # Can be upgraded. Set to 1.75 to avoid spam from a .75 minor version that that
    # repeatedly spams about missing fastapi dependency. This is a known bug, see:
    # https://github.com/BerriAI/litellm/issues/13827
    "jupyter>=1.1.1",
    "litellm==1.75",
    "loguru>=0.7.3",
    "matplotlib>=3.10.6",
    "omegaconf>=2.3.0",
    "openai[balrog]>=1.90.0",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "pyro-ppl>=1.9.1",
    "pytest-asyncio>=1.1.0",
    "pytest-retry>=1.7.0",
    "python-ulid>=3.0.0",
    "safetensors>=0.6.2",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "setuptools>=79.0.1",
    "tenacity>=9.1.2",
    "tensordict>=0.9.1",
    "truststore>=0.10.4",
    "vllm>=0.10.0; sys_platform == 'linux'",
    "wandb>=0.21.3",
]

[tool.hatch.build]
sources = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v -ra --strict-markers"
markers = [
    "asyncio: mark test as async",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.uv.sources]
crafter-oo = { path = "external/crafter_oo", editable = true }

[dependency-groups]
balrog = [
    "anthropic>=0.64.0",
    "google-generativeai>=0.8.5",
    "openai>=1.90.0",
]

[tool.ty.src]
include = ["src", "tests"]
exclude = ["src/onelife/external"]
