[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onelife"
requires-python = ">=3.12,<3.13"
version = "0.0.1"
description = ""
readme = "README.md"
authors = []
dependencies = [
    "cloudpickle>=3.1.1",
    "google-generativeai>=0.8.5",
    "gymnasium[mujoco]>=1.2.0",
    "hydra-core>=1.3.2",
    "litellm==1.75",
    "loguru>=0.7.3",
    "numpy>=2.3.0",
    "omegaconf>=2.3.0",
    "openai>=1.90.0",
    "pydantic>=2.11.0",
    "python-ulid>=3.0.0",
    "setuptools>=79.0.0",
]

[tool.hatch.build]
sources = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v -ra --strict-markers"
markers = [
    "asyncio: mark test as async",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.1.0",
    "pytest-retry>=1.7.0",
]

[tool.ty.src]
include = ["src", "tests"]
exclude = ["src/onelife/external"]
